Bug 274225 - Muon Software falla al instalar software
Summary: Muon Software falla al instalar software
Status: RESOLVED FIXED
Alias: None
Product: muon
Classification: Unmaintained
Component: installer (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 276155 276935 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-05-26 22:30 UTC by Saúl Martiñán Otero
Modified: 2011-09-24 22:31 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.1.85
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Saúl Martiñán Otero 2011-05-26 22:30:39 UTC
Application: muon-installer (1.1.2 "Bullish Bandril")
KDE Platform Version: 4.6.3 (4.6.3)
Qt Version: 4.7.2
Operating System: Linux 2.6.38-8-generic i686
Distribution: Ubuntu 11.04

-- Information about the crash:
- What I was doing when the application crashed:

Al instalar un paquete en el centro de software de Muon, este se cierra inesperadamente y lanza este asistente

The crash can be reproduced every time.

-- Backtrace:
Application: Centro de software de Muon (muon-installer), signal: Segmentation fault
[Current thread is 1 (Thread 0xb78c9710 (LWP 12799))]

Thread 2 (Thread 0xb4639b70 (LWP 12800)):
#0  0x00b1fd41 in clock_gettime () from /lib/i386-linux-gnu/librt.so.1
#1  0x00fd2dd8 in do_gettime () at tools/qelapsedtimer_unix.cpp:123
#2  qt_gettime () at tools/qelapsedtimer_unix.cpp:140
#3  0x0109f4f2 in updateCurrentTime (this=0x959f42c, tm=...) at kernel/qeventdispatcher_unix.cpp:339
#4  QTimerInfoList::timerWait (this=0x959f42c, tm=...) at kernel/qeventdispatcher_unix.cpp:442
#5  0x0109dd32 in timerSourcePrepareHelper (src=<value optimized out>, timeout=0xb46390dc) at kernel/qeventdispatcher_glib.cpp:136
#6  0x0109ddcd in timerSourcePrepare (source=0x959f3f8, timeout=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:169
#7  0x06d53fd4 in g_main_context_prepare () from /lib/i386-linux-gnu/libglib-2.0.so.0
#8  0x06d54e63 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#9  0x06d55524 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#10 0x0109e577 in QEventDispatcherGlib::processEvents (this=0x94b2360, flags=...) at kernel/qeventdispatcher_glib.cpp:424
#11 0x01070289 in QEventLoop::processEvents (this=0xb4639290, flags=...) at kernel/qeventloop.cpp:149
#12 0x01070522 in QEventLoop::exec (this=0xb4639290, flags=...) at kernel/qeventloop.cpp:201
#13 0x00f7a2a0 in QThread::exec (this=0x954f200) at thread/qthread.cpp:492
#14 0x01051fdb in QInotifyFileSystemWatcherEngine::run (this=0x954f200) at io/qfilesystemwatcher_inotify.cpp:248
#15 0x00f7cda2 in QThreadPrivate::start (arg=0x954f200) at thread/qthread_unix.cpp:320
#16 0x009cbe99 in start_thread () from /lib/i386-linux-gnu/libpthread.so.0
#17 0x0394a73e in clone () from /lib/i386-linux-gnu/libc.so.6

Thread 1 (Thread 0xb78c9710 (LWP 12799)):
[KCrash Handler]
#7  Transaction::application (this=0x2a5) at /build/buildd/muon-1.1.2/installer/Transaction.cpp:49
#8  0x0806f434 in ApplicationDetailsWidget::workerEvent (this=0xa16d4d8, event=QApt::PackageDownloadFinished, transaction=0x2a5) at /build/buildd/muon-1.1.2/installer/ApplicationDetailsView/ApplicationDetailsWidget.cpp:373
#9  0x080712d5 in ApplicationDetailsWidget::qt_metacall (this=0xa16d4d8, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbfb973c4) at /build/buildd/muon-1.1.2/obj-i686-linux-gnu/installer/ApplicationDetailsWidget.moc:120
#10 0x010776ba in QMetaObject::metacall (object=0xa16d4d8, cl=QMetaObject::InvokeMetaMethod, idx=35, argv=0xbfb973c4) at kernel/qmetaobject.cpp:237
#11 0x010874ff in QMetaObject::activate (sender=0x959f868, m=0x807aaa8, local_signal_index=3, argv=0xbfb973c4) at kernel/qobject.cpp:3287
#12 0x0805d04b in ApplicationBackend::workerEvent (this=0x959f868, _t1=QApt::PackageDownloadFinished, _t2=0x2a5) at /build/buildd/muon-1.1.2/obj-i686-linux-gnu/installer/moc_ApplicationBackend.cpp:151
#13 0x08061e36 in ApplicationBackend::workerEvent (this=0x959f868, event=QApt::PackageDownloadFinished) at /build/buildd/muon-1.1.2/installer/ApplicationBackend.cpp:146
#14 0x0805d314 in ApplicationBackend::qt_metacall (this=0x959f868, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbfb97538) at /build/buildd/muon-1.1.2/obj-i686-linux-gnu/installer/moc_ApplicationBackend.cpp:116
#15 0x010776ba in QMetaObject::metacall (object=0x959f868, cl=QMetaObject::InvokeMetaMethod, idx=16, argv=0xbfb97538) at kernel/qmetaobject.cpp:237
#16 0x010874ff in QMetaObject::activate (sender=0x95a6448, m=0x141ca4, local_signal_index=4, argv=0xbfb97538) at kernel/qobject.cpp:3287
#17 0x00134e23 in QApt::Backend::workerEvent(QApt::WorkerEvent) () from /usr/lib/libqapt.so.1
#18 0x0011b35a in QApt::Backend::emitWorkerEvent(int) () from /usr/lib/libqapt.so.1
#19 0x001350a1 in QApt::Backend::qt_metacall(QMetaObject::Call, int, void**) () from /usr/lib/libqapt.so.1
#20 0x010776ba in QMetaObject::metacall (object=0x95a6448, cl=QMetaObject::InvokeMetaMethod, idx=38, argv=0xbfb97678) at kernel/qmetaobject.cpp:237
#21 0x010874ff in QMetaObject::activate (sender=0x95ab528, m=0x141e24, local_signal_index=7, argv=0xbfb97678) at kernel/qobject.cpp:3287
#22 0x00135c83 in ?? () from /usr/lib/libqapt.so.1
#23 0x00136224 in ?? () from /usr/lib/libqapt.so.1
#24 0x0040dacd in QDBusConnectionPrivate::deliverCall (this=0x94334b0, object=0x95ab528, msg=..., metaTypes=..., slotIdx=12) at qdbusintegrator.cpp:942
#25 0x004181d7 in QDBusCallDeliveryEvent::placeMetaCall (this=0xa278bb0, object=0x95ab528) at qdbusintegrator_p.h:103
#26 0x010863b7 in QObject::event (this=0x95ab528, e=0xa278bb0) at kernel/qobject.cpp:1226
#27 0x012dbd24 in QApplicationPrivate::notify_helper (this=0x943bf80, receiver=0x95ab528, e=0xa278bb0) at kernel/qapplication.cpp:4462
#28 0x012e08ce in QApplication::notify (this=0xbfb980f4, receiver=0x95ab528, e=0xa278bb0) at kernel/qapplication.cpp:3862
#29 0x007eddba in KApplication::notify (this=0xbfb980f4, receiver=0x95ab528, event=0xa278bb0) at ../../kdeui/kernel/kapplication.cpp:311
#30 0x010710bb in QCoreApplication::notifyInternal (this=0xbfb980f4, receiver=0x95ab528, event=0xa278bb0) at kernel/qcoreapplication.cpp:731
#31 0x01074c79 in sendEvent (receiver=0x0, event_type=0, data=0x93f9f68) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#32 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x93f9f68) at kernel/qcoreapplication.cpp:1372
#33 0x01074e0d in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1265
#34 0x0109e3c4 in sendPostedEvents (s=0x9437ab0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:220
#35 postEventSourceDispatch (s=0x9437ab0) at kernel/qeventdispatcher_glib.cpp:277
#36 0x06d54aa8 in g_main_context_dispatch () from /lib/i386-linux-gnu/libglib-2.0.so.0
#37 0x06d55270 in ?? () from /lib/i386-linux-gnu/libglib-2.0.so.0
#38 0x06d55524 in g_main_context_iteration () from /lib/i386-linux-gnu/libglib-2.0.so.0
#39 0x0109e53c in QEventDispatcherGlib::processEvents (this=0x93f9ac0, flags=...) at kernel/qeventdispatcher_glib.cpp:422
#40 0x0138f775 in QGuiEventDispatcherGlib::processEvents (this=0x93f9ac0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#41 0x01070289 in QEventLoop::processEvents (this=0xbfb98054, flags=...) at kernel/qeventloop.cpp:149
#42 0x01070522 in QEventLoop::exec (this=0xbfb98054, flags=...) at kernel/qeventloop.cpp:201
#43 0x01074ecc in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1008
#44 0x012d98e7 in QApplication::exec () at kernel/qapplication.cpp:3736
#45 0x0805d82c in main (argc=0, argv=0xbfb973e4) at /build/buildd/muon-1.1.2/installer/main.cpp:60

Reported using DrKonqi
Comment 1 Jonathan Thomas 2011-06-22 04:24:05 UTC
*** Bug 276155 has been marked as a duplicate of this bug. ***
Comment 2 Jonathan Thomas 2011-06-22 05:47:48 UTC
Git commit ef903964d95da156c291e2d1a9653afb3bccaac6 by Jonathan Thomas.
Committed on 22/06/2011 at 05:45.
Pushed by jmthomas into branch 'master'.

Use QQueue for our installation/removal queue. It is much more robust than QList
with homebrewn queue behavior using iterators, and solves several crashes.

BUG:274225
FIXED-IN:1.1.85

M  +30   -29   installer/ApplicationBackend.cpp     
M  +3    -2    installer/ApplicationBackend.h     

http://commits.kde.org/muon/ef903964d95da156c291e2d1a9653afb3bccaac6
Comment 3 Jonathan Thomas 2011-07-04 06:27:12 UTC
*** Bug 276935 has been marked as a duplicate of this bug. ***
Comment 4 Jonathan Thomas 2011-09-24 22:31:38 UTC
*** Bug 282556 has been marked as a duplicate of this bug. ***