Use QQueue for our installation/removal queue. It is much more robust than QList with homebrewn queue behavior using iterators, and solves several crashes.

BUG:274225
FIXED-IN:1.1.85